--- a/Resources/css/overrides.css
+++ b/Resources/css/overrides.css
@@ -10,7 +10,7 @@ body {
 
 .navbar,
 .navbar-default {
-    background-color: #496ba0;
+    background-color: #3962a3;
     color: #fff;
 }
 
@@ -36,7 +36,7 @@ footer {
     width: 100%;
     height: 60px;
     line-height: 60px;
-    background-color: #496ba0;
+    background-color: #3962a3;
     color: #fff;
 }
 
