--- a/Resources/css/overrides.css
+++ b/Resources/css/overrides.css
@@ -123,15 +123,18 @@ button a:active {
 }
 
 .grid-item {
-    /* TODO: Remove this stupid hack once layout is OK */
-    border: 4px solid transparent !important;
-    border-radius: 8px !important;
-    background-color: transparent !important;
+    border: 4px solid transparent;
+    border-radius: 8px;
+    background-color: transparent;
     text-decoration: none !important;
 }
 
 .grid-item:hover {
     box-shadow: inset 0 0 0 3px rgba(0,0,0,0.1);
+}
+
+.grid-item:active {
+    background-color: rgba(0,0,0,0.05);
 }
 
 .img-container {
